--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
   "dependencies": {
     "@hapi/joi": "^17.1.1",
     "express": "^4.17.3",
+    "jest": "^28.1.1",
     "mongodb": "^4.4.1"
   },
   "devDependencies": {
