--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
   "scripts": {
     "start": "node src/api/server.js",
     "dev": "nodemon src/api/server.js",
-    "test": "mocha ./src/tests/*$NAME*.test.js --exit"
+    "api:test": "mocha ./src/tests/*$NAME*.test.js --exit",
+    "test": "jest"
   },
   "repository": {
     "type": "git",
@@ -21,12 +22,12 @@
   "dependencies": {
     "@hapi/joi": "^17.1.1",
     "express": "^4.17.3",
-    "jest": "^28.1.1",
     "mongodb": "^4.4.1"
   },
   "devDependencies": {
     "chai": "^4.3.6",
     "chai-http": "^4.3.0",
+    "jest": "^28.1.1",
     "mocha": "^9.2.2",
     "mongodb-memory-server": "^6.9.6",
     "nodemon": "^2.0.15",
